# tigergraphx

./: pyproject.toml
docs/: index.md  introduction.md
docs/getting_started/: installation.md  quick_start.ipynb
docs/graphrag/: graphrag_overview.md  lightrag.ipynb  msft_graphrag_1.md  msft_graphrag_1_1.ipynb  msft_graphrag_2.ipynb  msft_graphrag_3.ipynb
docs/reference/: features_overview.md
tigergraphx/core/api_integration/: __init__.py  api_wrapper.py  base_api.py  url_manager.py
